# dibug

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
dibug/: __init__.py  abc.py  dibugger.py
dibug/abc/: __init__.py  command.py
dibug/classes/: command.py  embed.py
dibug/commands/: __init__.py  eval.py  info.py  kill.py  shell.py
dibug/utils/: __init__.py  chunk.py  embed.py  inspect.py  object.py
docs/: conf.py  dibug.abc.rst  dibug.classes.rst  dibug.commands.rst  dibug.rst  dibug.utils.rst  index.rst  modules.rst
typings/async_eval/: __init__.pyi  async_eval.pyi  asyncio_patch.pyi
