[tool.poetry]
name = "dibug"
version = "0.1.0"
description = "Debugging Tool for discord.py"
authors = ["Starcea <stardev.uwu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = ">=2.0.0"
async-eval = "^0.1.11"

[tool.poetry.group.style.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.type.dependencies]
mypy = "^1.3.0"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["dibug", "typings"]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
